[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "requests_auth"
description = "Authentication for Requests"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Colin Bounouar", email = "colin.bounouar.dev@gmail.com" }
]
maintainers = [
    {name = "Colin Bounouar", email = "colin.bounouar.dev@gmail.com" }
]
keywords = [
    "authentication",
    "ntlm",
    "oauth2",
    "okta",
    "aad",
    "entra"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "requests==2.*",
]
dynamic = ["version"]

[project.urls]
documentation = "https://colin-b.github.io/requests_auth/"
repository = "https://github.com/Colin-b/requests_auth"
changelog = "https://github.com/Colin-b/requests_auth/blob/master/CHANGELOG.md"
issues = "https://github.com/Colin-b/requests_auth/issues"

[project.optional-dependencies]
testing = [
    # Used to generate test tokens
    "pyjwt==2.*",
    # Used to mock requests
    "pytest-responses==0.5.*",
    # Used to check coverage
    "pytest-cov==5.*",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = {attr = "requests_auth.version.__version__"}
